# homer_navigation

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
config/: homer_navigation.yaml  homer_navigation_pioneer.yaml
include/homer_navigation/: depth_occupancy_map.h  drive_to_node.h  homer_navigation_node.h
launch/: homer_navigation.launch  homer_navigation_pioneer.launch
nodes/: detect_obstacle.py
src/: depth_occupancy_map.cpp  drive_to_node.cpp  homer_navigation_node.cpp
